<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global App resources -->
    <string name="app_name">Rex Light Meter</string>

    <!-- MainActivity labels in LCD -->
    <string name="main_label_lux">"Lx"</string>
    <string name="main_label_ev">"EV"</string>
    <string name="main_label_iso">"ISO"</string>
    <string name="main_label_compensation">"+/-"</string>

    <!-- MainActivity labels in setting -->
    <string name="main_label_aperture">"Aperture:"</string>
    <string name="main_label_shutter">"Shutter:"</string>
    <string name="main_radio_mode_a">"A/Av"</string>
    <string name="main_radio_mode_s">"S/Tv"</string>
    <string name="main_radio_mode_none">"P"</string>
    <string name="main_radio_mode_iso">"ISO"</string>

    <!-- MainActivity buttons -->
    <string name="main_button_measure">"Press me to measure"</string>

    <!-- MainActivity menus -->
    <string name="menu_about">"About"</string>
    <string name="menu_setting">"Setting"</string>
    <string name="menu_feedback">"Feedback"</string>
    <string name="menu_share">"Share"</string>

    <!-- Share this app -->
    <string name="share_this_chooser_title">"Share our app via"</string>
    <string name="share_this_subject">"I found a cool app %1$s!"</string>
    <string name="share_this_content">"This is a very useful tool app that can help you learn photography! It’s at: %1$s"</string>

    <!-- Contact US -->
    <string name="contact_mail_default_body_device">"[Device]: %1$s"</string>
    <string name="contact_mail_default_body_version">"[App]: %1$s"</string>
    <string name="contact_mail_default_body_lang">"[Language]: %1$s"</string>
    <string name="contact_mail_chooser_title">"Select an application to send the email"</string>

    <!-- Config settings -->
    <string name="conf_category_general">"General"</string>
    <string name="conf_category_experimental">"Experimental"</string>
    <string name="conf_enable_keep_screen_on">"Keep screen on"</string>
    <string name="conf_enable_keep_screen_on_summary">"Keep screen on while using this app, take effect after next launch"</string>
    <string name="conf_enable_keep_screen_orientation">"Keep screen orientation"</string>
    <string name="conf_enable_keep_screen_orientation_summary">"Do not rotate the screen"</string>
    <string name="conf_enable_tracking">"Help improve usage"</string>
    <string name="conf_enable_tracking_summary">"Help improve this product by submitting anonymous usage data"</string>
    <string name="conf_enable_volume_key">"Use volume key"</string>
    <string name="conf_enable_volume_key_summary">"Use volume key to change aperture, shutter speed, and ISO"</string>
    <string name="conf_enable_record_max">"Record max value"</string>
    <string name="conf_enable_record_max_summary">"For each time pressed the measure button, record the max value"</string>
    <string name="conf_ev_stop">"EV stops"</string>
    <string name="conf_ev_stop_summary">"Stops to adjust the aperture, shutter speed or ISO"</string>
    <string name="conf_exposure_compensation">"Exposure Compensation"</string>
    <string name="conf_exposure_compensation_summary">"Calibrate the light sensor"</string>

    <!-- Dialogs -->
    <string name="dlg_ev_stop_title">"Choose a stop value"</string>
    <string name="dlg_exposure_compensation_title">"Choose a compensation value"</string>

    <!-- Toast -->
    <string name="toast_quit">"Press again to quit"</string>

    <!-- About -->
    <string name="about_category_title">"About"</string>
    <string name="about_app_summary">"© 2017 RexStudio All rights reserved."</string>
    <string name="about_version_title">"Version"</string>
    <string name="about_version_summary">"%1$s r%2$d"</string>
    <string name="about_toast_experimental">"Press %1$d more time(s) to enable experimental setting"</string>
    <string name="about_toast_experimental_on">"Already enabled experimental settings"</string>

</resources>
