<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/conf_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="CONF_ENABLE_TRACKING"
            android:summary="@string/conf_enable_tracking_summary"
            android:title="@string/conf_enable_tracking" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="CONF_ENABLE_VOLUME_KEY"
            android:summary="@string/conf_enable_volume_key_summary"
            android:title="@string/conf_enable_volume_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="CONF_ENABLE_KEEP_SCREEN_ON"
            android:summary="@string/conf_enable_keep_screen_on_summary"
            android:title="@string/conf_enable_keep_screen_on" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="CONF_ENABLE_KEEP_SCREEN_ORIENTATION"
            android:summary="@string/conf_enable_keep_screen_orientation_summary"
            android:title="@string/conf_enable_keep_screen_orientation" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="CONF_ENABLE_RECORD_MAX_VALUE"
            android:summary="@string/conf_enable_record_max_summary"
            android:title="@string/conf_enable_record_max" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/dlg_exposure_compensation_title"
            android:entries="@array/pref_exposure_compensation"
            android:entryValues="@array/pref_exposure_compensation_value"
            android:key="CONF_EXPOSURE_COMPENSATION"
            android:summary="@string/conf_exposure_compensation_summary"
            android:title="@string/conf_exposure_compensation" />
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/dlg_ev_stop_title"
            android:entries="@array/pref_ev_stop"
            android:entryValues="@array/pref_ev_stop_value"
            android:key="CONF_EV_STEP"
            android:summary="@string/conf_ev_stop_summary"
            android:title="@string/conf_ev_stop" />
    </PreferenceCategory>

</PreferenceScreen>
