<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/menu_feedback"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="100"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/menu_about" />

</menu>
